# motor_challenge

./: CMakeLists.txt  README.md  package.xml
bags/: sample.bag
include/motor_challenge/: motor_challenge_node.h
launch/: motor_challenge.launch  motor_challenge_param_sim.launch  plots.launch
msg/: EncoderData.msg  EncoderStatus.msg  MotorStatus.msg
src/: motor_challenge_node.cpp
