<?xml version="1.0"?>
<package>
  <name>motor_challenge</name>
  <version>0.1.0</version>
  <description>Minimal starting point for the motor diagnostics challenge</description>

  <maintainer email="rgariepy@clearpathrobotics.com">Ryan Gariepy</maintainer>

  <license>3-Clause BSD</license>

  <author email="rgariepy@clearpathrobotics.com">Ryan Gariepy</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
